# idfm

./: .bandit  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  README_template.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy_docs.yaml
api/: main.py  main2.py
code/: index.html
config/: config.py
notebooks/: 1_idfm.ipynb  2_idfm_analyses.ipynb  3_idfm_db.ipynb  4_idfm_geopandas.ipynb  idfm.ipynb
search/: search_index.json
src/: app.py  collecte.py  preparation.py  stockage.py
src/idfm/core/: __init__.py
src/my_ds_project/: __init__.py  app.py
src/my_ds_project/core/: data_processing.py  models.py
src/my_ds_project/utils/: __init__.py  helpers.py
tests/unit_tests/: test_data_processing.py  test_placeholder.py
